[gd_scene load_steps=37 format=3 uid="uid://cq0285b5b3vsl"]

[ext_resource type="Script" path="res://scripts/gameplay/world.gd" id="1_1tsci"]
[ext_resource type="Script" path="res://scripts/utilities/world_sidecar.gd" id="2_c1u7j"]
[ext_resource type="AudioStream" uid="uid://ccx41wl03ptt8" path="res://assets/audio/music/puzzle-1-a.mp3" id="3_x603d"]
[ext_resource type="AudioStream" uid="uid://b8t0jjpe1bko0" path="res://assets/audio/music/puzzle-1-b.mp3" id="4_yrjhw"]
[ext_resource type="PackedScene" uid="uid://73jm5qjy52vq" path="res://dialogue/balloons/dialogue_panel.tscn" id="5_5ybxs"]
[ext_resource type="Resource" uid="uid://c76dovn7xyg1t" path="res://dialogue/intro.dialogue" id="6_6pmn4"]
[ext_resource type="Resource" uid="uid://b7vkvfpwhuq0d" path="res://dialogue/not_my_body.dialogue" id="7_3lch6"]
[ext_resource type="Resource" uid="uid://cdej5k1cu7xm3" path="res://game_resources/value_refs/is_paused_reference.tres" id="8_gyatd"]
[ext_resource type="Resource" uid="uid://b7e4bh0bk7uky" path="res://game_resources/value_refs/is_level_ended.tres" id="9_pvch2"]
[ext_resource type="Resource" uid="uid://8gatgf2uan6p" path="res://game_resources/events/level_end.tres" id="10_6vdlt"]
[ext_resource type="Texture2D" uid="uid://ctfve3of2rl1s" path="res://assets/aseprite/cave_background_fill.png" id="11_7h0tv"]
[ext_resource type="Texture2D" uid="uid://dqon6p3bnl0xf" path="res://assets/aseprite/cave_far.png" id="12_jx7cc"]
[ext_resource type="Texture2D" uid="uid://b3ugb5665ckii" path="res://assets/aseprite/cave_mid.png" id="13_br3nh"]
[ext_resource type="Texture2D" uid="uid://d0fk2yc80p068" path="res://assets/aseprite/cave_close.png" id="14_t8373"]
[ext_resource type="PackedScene" uid="uid://xkstgxsj8dsd" path="res://scenes/common/world_obstacles/death_zone.tscn" id="14_vdgw1"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="15_2t1g2"]
[ext_resource type="PackedScene" uid="uid://1dbb4e67nhpr" path="res://scenes/common/camera/goal_cam.tscn" id="16_ikxkm"]
[ext_resource type="Shader" path="res://shaders/post_processing/blur_postprocess.gdshader" id="16_y2w4x"]
[ext_resource type="PackedScene" uid="uid://tj36dxpn0ig7" path="res://scenes/worlds/world_2/level_0.tscn" id="17_2arrn"]
[ext_resource type="Script" path="res://scripts/camera/screensize_viewport.gd" id="17_eso28"]
[ext_resource type="Script" path="res://scripts/camera/camera_trigger_targeter.gd" id="18_1misg"]
[ext_resource type="PackedScene" uid="uid://d1g1nnyrfy1un" path="res://scenes/worlds/world_2/level_1.tscn" id="18_3vlao"]
[ext_resource type="Resource" uid="uid://dxvswfxk2kwac" path="res://game_resources/events/camera_trigger_entered.tres" id="19_fu0jp"]
[ext_resource type="PackedScene" uid="uid://b2kk6vvopxhev" path="res://scenes/common/ui/player_hud.tscn" id="20_dc6y0"]
[ext_resource type="Texture2D" uid="uid://c8yfrjpm5qqjt" path="res://sprites/ui/ui-tileset.png" id="21_xryih"]
[ext_resource type="Shader" path="res://shaders/minimap.gdshader" id="22_7dd61"]
[ext_resource type="Script" path="res://scripts/ui/viewport_texture_rect.gd" id="23_vi773"]
[ext_resource type="PackedScene" uid="uid://djujqcbughbl" path="res://scenes/common/ui/pause_menu.tscn" id="24_dkxwy"]
[ext_resource type="PackedScene" uid="uid://daq3d1xyojm4y" path="res://scenes/common/ui/game_over_ui.tscn" id="25_ne7w3"]
[ext_resource type="Resource" uid="uid://d1xvpg7cf381r" path="res://game_resources/value_refs/is_game_over_ref.tres" id="26_6iw47"]
[ext_resource type="PackedScene" uid="uid://bxt126iidliwk" path="res://scenes/common/ui/level_end.tscn" id="27_dgrch"]

[sub_resource type="AudioStreamPlaylist" id="AudioStreamPlaylist_toklv"]
stream_count = 2
stream_0 = ExtResource("3_x603d")
stream_1 = ExtResource("4_yrjhw")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_44xxc"]
shader = ExtResource("16_y2w4x")
shader_parameter/strength = 3

[sub_resource type="AtlasTexture" id="AtlasTexture_1hbah"]
atlas = ExtResource("21_xryih")
region = Rect2(69, 4, 21, 24)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n26pt"]
shader = ExtResource("22_7dd61")
shader_parameter/color = Color(0.298039, 0.32549, 0.611765, 1)
shader_parameter/background_color = Color(0.152941, 0.152941, 0.266667, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_sngi8"]
viewport_path = NodePath("minimap_viewport")

[node name="World2" type="Node2D" node_paths=PackedStringArray("levels")]
visibility_layer = 3
script = ExtResource("1_1tsci")
iid = "world-2"
levels = [null, null]

[node name="WorldSidecar" type="Node" parent="." node_paths=PackedStringArray("goal_camera")]
script = ExtResource("2_c1u7j")
world_name = "World 2"
world_idx = 2
world_song_queue = SubResource("AudioStreamPlaylist_toklv")
balloon_scene = ExtResource("5_5ybxs")
dialogue = ExtResource("6_6pmn4")
dialogue_title = "Level2"
end_dialogue = ExtResource("7_3lch6")
end_dialogue_title = "Level2"
is_paused = ExtResource("8_gyatd")
has_completed_level = ExtResource("9_pvch2")
goal_camera = NodePath("../GoalCam")
level_end_event = ExtResource("10_6vdlt")

[node name="Background" type="Node2D" parent="."]
position = Vector2(-1, 44)

[node name="Parallax2D" type="Parallax2D" parent="Background"]
repeat_size = Vector2(576, 324)
repeat_times = 4

[node name="TextureRect" type="TextureRect" parent="Background/Parallax2D"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_7h0tv")
stretch_mode = 2
metadata/_aseprite_wizard_interface_config_ = {
"layer_section": true,
"output_section": true,
"pending_changes": {}
}
metadata/_aseprite_wizard_config_ = {
"i_mode": 1,
"keep_anim_length": false,
"layers": [],
"o_ex_p": "",
"o_folder": "res://assets/aseprite",
"o_name": "",
"only_visible": true,
"player": "",
"slice": "",
"source": "res://assets/aseprite/background_0.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "43a0a749b8547f34009ab29eeea82bd6"

[node name="Parallax2D2" type="Parallax2D" parent="Background"]
scroll_scale = Vector2(0.25, 0.25)
scroll_offset = Vector2(0, -10)
repeat_size = Vector2(576, 0)
repeat_times = 5

[node name="TextureRect" type="TextureRect" parent="Background/Parallax2D2"]
custom_minimum_size = Vector2(640, 360)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_jx7cc")
stretch_mode = 5

[node name="Parallax2D3" type="Parallax2D" parent="Background"]
scroll_scale = Vector2(0.5, 0.5)
scroll_offset = Vector2(0, -30)
repeat_size = Vector2(576, 0)
repeat_times = 3

[node name="TextureRect" type="TextureRect" parent="Background/Parallax2D3"]
custom_minimum_size = Vector2(640, 360)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("13_br3nh")
stretch_mode = 5

[node name="Parallax2D4" type="Parallax2D" parent="Background"]
scroll_scale = Vector2(0.75, 0.75)
scroll_offset = Vector2(0, -30)
repeat_size = Vector2(576, 0)
repeat_times = 3

[node name="TextureRect" type="TextureRect" parent="Background/Parallax2D4"]
custom_minimum_size = Vector2(640, 360)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("14_t8373")
stretch_mode = 5

[node name="Parallax2D5" type="Parallax2D" parent="Background"]
visible = false
repeat_size = Vector2(576, 324)

[node name="ColorRect" type="ColorRect" parent="Background/Parallax2D5"]
material = SubResource("ShaderMaterial_44xxc")
offset_top = -96.0
offset_right = 641.0
offset_bottom = 314.0
color = Color(0.286275, 0.301961, 0.494118, 1)

[node name="Level_0" parent="." instance=ExtResource("17_2arrn")]

[node name="Level_1" parent="." instance=ExtResource("18_3vlao")]

[node name="DeathZone" parent="." instance=ExtResource("14_vdgw1")]

[node name="MainCamera" type="Camera2D" parent="."]
ignore_rotation = false
process_callback = 0

[node name="PhantomCameraHost" type="Node" parent="MainCamera"]
process_priority = 300
process_physics_priority = 300
script = ExtResource("15_2t1g2")

[node name="GoalCam" parent="." instance=ExtResource("16_ikxkm")]
position = Vector2(2047, -662)

[node name="minimap_viewport" type="SubViewport" parent="."]
process_mode = 3
disable_3d = true
own_world_3d = true
transparent_bg = true
handle_input_locally = false
snap_2d_transforms_to_pixel = true
audio_listener_enable_2d = true
gui_disable_input = true
canvas_cull_mask = 4293918722
size = Vector2i(640, 360)
render_target_update_mode = 4
script = ExtResource("17_eso28")

[node name="camera_minimap" type="Camera2D" parent="minimap_viewport"]
z_as_relative = false
offset = Vector2(0, 180)

[node name="camera_trigger_targeter" type="Node" parent="minimap_viewport/camera_minimap" node_paths=PackedStringArray("camera")]
script = ExtResource("18_1misg")
camera = NodePath("..")
area_entered_event = ExtResource("19_fu0jp")

[node name="ui" type="CanvasLayer" parent="."]
layer = 100

[node name="player_hud" parent="ui" instance=ExtResource("20_dc6y0")]
unique_name_in_owner = true

[node name="minimap" type="Control" parent="ui"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 477.0
offset_top = 46.0
offset_right = -163.0
offset_bottom = -314.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect2" type="TextureRect" parent="ui/minimap"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -12.0
offset_right = 150.0
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_1hbah")

[node name="MarginContainer" type="MarginContainer" parent="ui/minimap/TextureRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="TextureRect" type="TextureRect" parent="ui/minimap/TextureRect2/MarginContainer" node_paths=PackedStringArray("viewport")]
material = SubResource("ShaderMaterial_n26pt")
layout_mode = 2
texture = SubResource("ViewportTexture_sngi8")
expand_mode = 3
script = ExtResource("23_vi773")
viewport = NodePath("../../../../../minimap_viewport")

[node name="pause_menu" parent="ui" instance=ExtResource("24_dkxwy")]
visible = false
offset_left = -3.0
offset_right = -3.0

[node name="GameOverUI" parent="ui" instance=ExtResource("25_ne7w3")]
visible = false
is_game_over = ExtResource("26_6iw47")

[node name="LevelEndUI" parent="ui" instance=ExtResource("27_dgrch")]
unique_name_in_owner = true
visible = false
